--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ui.App"
         android:allowBackup="true"
@@ -14,19 +16,23 @@
         android:theme="@style/Theme.ChampionsFormula"
         tools:targetApi="31">
         <activity
+            android:name=".ui.driver.DriversActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.demonstration.ViewDriversActivity"
-            android:screenOrientation="nosensor"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="nosensor" />
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
